<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingRight="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:id="@+id/txvUserName"
        android:text="@string/label_login_name" />

    <android.support.v7.widget.CardView
        android:id="@+id/cdvUserName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_toRightOf="@+id/txvUserName"
        android:layout_toEndOf="@+id/txvUserName"
        card_view:cardBackgroundColor="#d9d9d9"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/editText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtUserName"
                android:textColor="#000000" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingRight="33dp"
        android:paddingLeft="10dp"
        android:layout_below="@+id/txvUserName"
        android:id="@+id/txvPassword"
        android:text="@string/label_password" />

    <android.support.v7.widget.CardView
        android:id="@+id/cdvPassword"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@+id/cdvUserName"
        android:layout_toRightOf="@+id/txvPassword"
        android:layout_toEndOf="@+id/txvPassword"
        card_view:cardBackgroundColor="#d9d9d9"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/editText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:ems="10"
                android:textColor="#000000" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        android:layout_below="@+id/cdvPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/action_login" />

</RelativeLayout>